# Dev_IsLibrary

./: .gitignore  CMakeLists.txt  README.md  version.rc.in
build-tool/: utf8_to_utf16.py
build-tool/cmake/: download_and_extract.cmake  googletest.cmake  googletest_origin.cmake
include/IsCommon/: IsCommon.hpp  datetime.hpp  debug.hpp  defs.hpp  exception.hpp  format_string.hpp  join_string.hpp  math.hpp  rtti.hpp  singleton_manager-internal.hpp  singleton_manager.hpp  split_string.hpp  thread_pool.hpp  time.hpp  tm.hpp
include/IsCommon/internal/: assert.hpp  datetime.hpp  debug.hpp  defs.hpp  exception.hpp  format_string.hpp  geometry.hpp  join_string.hpp  lexical_cast.hpp  linalg.hpp  math.hpp  rtti.hpp  singleton_manager-internal.hpp  singleton_manager.hpp  split_string.hpp  thread_pool.hpp  time.hpp
include/IsCommon/win32/: win32_api_error.hpp  win32_char_transform.hpp  win32_console.hpp  win32_defs.hpp  win32_tm.hpp
include/IsComputerVision/: IsComputerVision.hpp  color_format.hpp  common.hpp  debug.hpp  defs.hpp  ndarray_saturate_clamp.hpp  pch.hpp  saturate_clamp.hpp  type-impl.hpp  type.hpp
include/IsComputerVision/camera/: camera_controller.hpp  camera_frame_reader.hpp
include/IsComputerVision/hist/: flat_hist.hpp
include/IsComputerVision/io/: bmp_policy.hpp  image_io.hpp  img_io.hpp  jpg_policy.hpp  png_policy.hpp
include/IsNdArray/: IsNdArray.hpp  array.hpp  array_registry.hpp  backend_base.hpp  backend_registry.hpp  common.hpp  context.hpp  cpu.hpp  dtypes.hpp  dtypes_to_type.hpp  event.hpp  exception.hpp  float_bits.hpp  function.hpp  function_registry.hpp  garbage_collector.hpp  global_context.hpp  half.hpp  imperative.hpp  init.hpp  logger.hpp  nd_array.hpp  nd_array_extra.hpp  preprocessor_magic.hpp  random_manager.hpp  singleton_manager-internal.hpp  singleton_manager.hpp  synced_array.hpp
python/: CMakeLists.txt
python/src/: mylib.cpp  mylib.hpp
src/IsCommon/: CMakeLists.txt  datetime.cpp  exception.cpp  math.cpp  singleton_manager.cpp  thread_pool.cpp
src/IsComputerVision/: CMakeLists.txt  pch.cpp
src/IsComputerVision/camera/: camera_controller.cpp  camera_frame_reader.cpp  usb_camera_frame_reader.cpp
src/IsComputerVision/camera/device/: usb_camera_frame_reader.cpp
src/IsComputerVision/camera/general/: usb_camera_frame_reader.cpp
src/IsComputerVision/filter/blur/: average_blur.cpp  gaussian_blur.cpp  median_blur.cpp  mozic_blur.cpp
src/IsComputerVision/filter/edge_detector/: laplacian_edge_detector.cpp  log_edge_detector.cpp  sobel_edge_detector.cpp
src/IsComputerVision/filter/sharpness/: sharpness.cpp  sharpness_filter.cpp
src/IsComputerVision/io/: bmp_policy.cpp  jpg_policy.cpp  png_policy.cpp
src/IsComputerVision/io/format/: bmp_policy.cpp  jpg_policy.cpp  png_policy.cpp
src/IsComputerVision/win32/: win32_graphics.cpp
src/IsNdArray/: CMakeLists.txt  array.cpp  array_registry.cpp  backend_registry.cpp  context.cpp  cpu.cpp  event.cpp  exception.cpp  function.cpp  garbage_collector.cpp  global_context.cpp  half.cpp  imperative.cpp  init.cpp  nd_array.cpp  random_manager.cpp  singleton_manager.cpp  synced_array.cpp
src/IsNdArray/array/: cpu_array-internal.hpp  cpu_array.cpp
src/IsNdArray/function/generic/: abs.cpp  acos.cpp  acosh.cpp  add2.cpp  add_scalar.cpp  affine.cpp  arange.cpp  asin.cpp  asinh.cpp  atan.cpp  atan2.cpp  atanh.cpp  bc_add2.cpp  broadcast.cpp  ceil.cpp  concatenate.cpp  constant.cpp  cos.cpp  cosh.cpp  cumprod.cpp  cumsum.cpp  div2.cpp  equal.cpp  equal_scalar.cpp  exp.cpp  flip.cpp  floor.cpp  greater.cpp  greater_equal.cpp  greater_equal_scalar.cpp  greater_scalar.cpp  isinf.cpp  isnan.cpp  less.cpp  less_equal.cpp  less_equal_scalar.cpp  less_scalar.cpp  log.cpp  log10.cpp  log1p.cpp  (+50 more)
src/IsNdArray/memory/: allocator.cpp  allocator_callback.cpp  caching_allocator_with_buckets.cpp  cpu_memory.cpp  memory.cpp
test/: CMakeLists.txt  test_utils.hpp
test/cmake/: test_case.cmake
test/test_cv/: CMakeLists.txt  test_cv_blur.cpp  test_cv_edge_detector.cpp  test_cv_io.cpp  test_cv_opt.cpp  test_cv_padding.cpp  test_cv_saturate_cast.cpp
test/test_imgproc/: CMakeLists.txt  test_cv_edge_detector.cpp  test_cv_io.cpp  test_cv_opt.cpp  test_cv_saturate_cast.cpp  test_imgproc_blur.cpp  test_imgproc_edge_detector.cpp  test_imgproc_io.cpp  test_imgproc_opt.cpp  test_imgproc_padding.cpp  test_imgproc_saturate_cast.cpp
test/test_nnabla/: CMakeLists.txt  TODO.txt  test_nnabla.hpp  test_nnabla.temp.cpp
test/test_nnabla/core/: CMakeLists.txt  test_nnabla_core_allocator.cpp  test_nnabla_core_array.cpp  test_nnabla_core_caching_allocator.cpp  test_nnabla_core_context.cpp  test_nnabla_core_memory.cpp  test_nnabla_core_ndarray.cpp  test_nnabla_core_synced_array.cpp
test/test_nnabla/func/: CMakeLists.txt  test_nnabla_func_abs.cpp  test_nnabla_func_acos.cpp  test_nnabla_func_acosh.cpp  test_nnabla_func_add2.cpp  test_nnabla_func_add_scalar.cpp  test_nnabla_func_arange.cpp  test_nnabla_func_asin.cpp  test_nnabla_func_asinh.cpp  test_nnabla_func_atan.cpp  test_nnabla_func_atanh.cpp  test_nnabla_func_broadcast.cpp  test_nnabla_func_ceil.cpp  test_nnabla_func_concatenate.cpp  test_nnabla_func_cos.cpp  test_nnabla_func_cosh.cpp  test_nnabla_func_cumprod.cpp  test_nnabla_func_cumsum.cpp  test_nnabla_func_div2.cpp  test_nnabla_func_equal.cpp  test_nnabla_func_equal_scalar.cpp  test_nnabla_func_exp.cpp  test_nnabla_func_floor.cpp  test_nnabla_func_greater.cpp  test_nnabla_func_greater_equal.cpp  test_nnabla_func_greater_equal_scalar.cpp  test_nnabla_func_greater_scalar.cpp  test_nnabla_func_isinf.cpp  test_nnabla_func_isnan.cpp  test_nnabla_func_less.cpp  test_nnabla_func_less_equal.cpp  test_nnabla_func_less_equal_scalar.cpp  test_nnabla_func_less_scalar.cpp  test_nnabla_func_log.cpp  test_nnabla_func_log10.cpp  test_nnabla_func_log1p.cpp  test_nnabla_func_log2.cpp  test_nnabla_func_log_sigmoid.cpp  test_nnabla_func_logical_and.cpp  test_nnabla_func_logical_and_scalar.cpp  (+41 more)
test/tutorial_googletest/: CMakeLists.txt  account.hpp  deal.cpp  deal.hpp  mock_account.hpp  test_gtest.cpp
(+129 files in other folders)
